--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,7 +31,5 @@
             android:padding="10dp"
             android:src="@drawable/menu" />
     </RelativeLayout>
-    <include layout="@layout/home_page_content"
-
-        />
+    <!--<include layout="@layout/home_page_content"/>-->
 </RelativeLayout>
