--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,6 +23,6 @@
 
     <!--</android.support.design.widget.AppBarLayout>-->
 
-    <include layout="@layout/content_main" />
+    <!--&lt;!&ndash;<include layout="@layout/content_main" />&ndash;&gt;-->
 
 </android.support.design.widget.CoordinatorLayout>
